--- a/scrapper.ipynb
+++ b/scrapper.ipynb
@@ -160,24 +160,21 @@
     "from selenium.common.exceptions import TimeoutException, NoSuchElementException\n",
     "\n",
     "# Twitter login credentials\n",
-    "twitter_username = \"@baboi08293511\"\n",
-    "twitter_password = \"-wNXZ-9V5een2Yn\"\n",
+    "twitter_username = ""
+    "twitter_password = ""
     "\n",
-    "# Search terms\n",
+   
     "search_terms = [ \"financial markets\", \"algorithmic trading\"]\n",
     "\n",
-    "# Initialize the WebDriver\n",
     "path = r\"C:\\Users\\risha\\seleniumtwitterstock\\chromedriver.exe\"\n",
     "service = Service(path)\n",
     "driver = webdriver.Chrome(service=service)\n",
     "driver.maximize_window()\n",
     "\n",
-    "# Function to log in to Twitter\n",
     "def login_to_twitter(username, password):\n",
     "    driver.get('https://twitter.com/login')\n",
     "    time.sleep(3)\n",
     "    \n",
-    "    # Wait for the username field to be present\n",
     "    username_field = WebDriverWait(driver, 5).until(\n",
     "        EC.presence_of_element_located((By.NAME, 'text'))\n",
     "    )\n",
@@ -185,7 +182,6 @@
     "    print(\"Username entered.\")\n",
     "    \n",
     "    try:\n",
-    "        # Wait for the \"Next\" button to be clickable and click it\n",
     "        next_button = WebDriverWait(driver, 5).until(\n",
     "            EC.element_to_be_clickable((By.XPATH, '//*[@id=\"layers\"]/div[2]/div/div/div/div/div/div[2]/div[2]/div/div/div[2]/div[2]/div/div/div/button[2]/div/span/span'))\n",
     "        )\n",
@@ -196,7 +192,6 @@
     "        print(\"Next button not found. Exiting.\")\n",
     "        return\n",
     "    \n",
-    "    # Wait for the password field to be present\n",
     "    password_field = WebDriverWait(driver, 5).until(\n",
     "        EC.presence_of_element_located((By.NAME, 'password'))\n",
     "    )\n",
@@ -204,7 +199,6 @@
     "    print(\"Password entered.\")\n",
     "    \n",
     "    try:\n",
-    "        # Wait for the login button to be clickable and click it\n",
     "        login_button = WebDriverWait(driver, 5).until(\n",
     "            EC.element_to_be_clickable((By.XPATH, '//*[@id=\"layers\"]/div/div/div/div/div/div/div[2]/div[2]/div/div/div[2]/div[2]/div[2]/div/div[1]/div/div/button/div'))\n",
     "        )\n",
@@ -218,7 +212,6 @@
     "\n",
     "def handle_popups():\n",
     "    try:\n",
-    "        # Try to find and close any pop-ups\n",
     "        close_buttons = driver.find_elements(By.XPATH, \"//div[@role='button' and @aria-label='Close']\")\n",
     "        for button in close_buttons:\n",
     "            button.click()\n",
@@ -226,7 +219,6 @@
     "    except Exception as e:\n",
     "        print(f\"Error handling pop-ups: {e}\")\n",
     "\n",
-    "# Function to search for users and follow them\n",
     "def search_and_follow_users(search_term):\n",
     "    driver.get(f'https://twitter.com/search?q={search_term}&src=typed_query&f=user')\n",
     "    time.sleep(5)\n",
@@ -243,11 +235,9 @@
     "            )\n",
     "            for button in follow_buttons:\n",
     "                try:\n",
-    "                    # Try to click the button normally\n",
     "                    button.click()\n",
     "                except Exception as e:\n",
     "                    try:\n",
-    "                        # If normal click fails, try using JavaScript\n",
     "                        driver.execute_script(\"arguments[0].click();\", button)\n",
     "                    except Exception as js_e:\n",
     "                        print(f\"Error clicking follow button with JavaScript: {js_e}\")\n",
@@ -259,11 +249,9 @@
     "                if followed_users >= 500:\n",
     "                    return\n",
     "\n",
-    "            # Scroll down\n",
     "            driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
     "            time.sleep(2)\n",
     "            \n",
-    "            # Check if we've reached the end of the page\n",
     "            try:\n",
     "                WebDriverWait(driver, 5).until(EC.presence_of_element_located((By.XPATH, \"//div[contains(text(), 'End of results')]\")))\n",
     "                scrolling = False\n",
@@ -277,14 +265,11 @@
     "    if followed_users == 0:\n",
     "        print(f\"Could not find any users to follow for the search term '{search_term}'\")\n",
     "\n",
-    "# Log in to Twitter\n",
     "login_to_twitter(twitter_username, twitter_password)\n",
     "\n",
-    "# Search and follow users for each search term\n",
     "for term in search_terms:\n",
     "    search_and_follow_users(term)\n",
     "\n",
-    "# Close the driver\n",
     "driver.quit()"
    ]
   }
