--- a/scrapper.ipynb
+++ b/scrapper.ipynb
@@ -159,12 +159,10 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.common.exceptions import TimeoutException, NoSuchElementException\n",
     "\n",
-    "# Twitter login credentials\n",
-    "twitter_username = ""
-    "twitter_password = ""
+    "twitter_username = \"\"\n",
+    "twitter_password = \"\"\n",
     "\n",
-   
-    "search_terms = [ \"financial markets\", \"algorithmic trading\"]\n",
+    "search_terms = [\"financial markets\", \"algorithmic trading\"]\n",
     "\n",
     "path = r\"C:\\Users\\risha\\seleniumtwitterstock\\chromedriver.exe\"\n",
     "service = Service(path)\n",
@@ -179,33 +177,27 @@
     "        EC.presence_of_element_located((By.NAME, 'text'))\n",
     "    )\n",
     "    username_field.send_keys(username)\n",
-    "    print(\"Username entered.\")\n",
     "    \n",
     "    try:\n",
     "        next_button = WebDriverWait(driver, 5).until(\n",
     "            EC.element_to_be_clickable((By.XPATH, '//*[@id=\"layers\"]/div[2]/div/div/div/div/div/div[2]/div[2]/div/div/div[2]/div[2]/div/div/div/button[2]/div/span/span'))\n",
     "        )\n",
     "        next_button.click()\n",
-    "        print(\"Next button clicked.\")\n",
     "        time.sleep(3)\n",
     "    except TimeoutException:\n",
-    "        print(\"Next button not found. Exiting.\")\n",
     "        return\n",
     "    \n",
     "    password_field = WebDriverWait(driver, 5).until(\n",
     "        EC.presence_of_element_located((By.NAME, 'password'))\n",
     "    )\n",
     "    password_field.send_keys(password)\n",
-    "    print(\"Password entered.\")\n",
     "    \n",
     "    try:\n",
     "        login_button = WebDriverWait(driver, 5).until(\n",
     "            EC.element_to_be_clickable((By.XPATH, '//*[@id=\"layers\"]/div/div/div/div/div/div/div[2]/div[2]/div/div/div[2]/div[2]/div[2]/div/div[1]/div/div/button/div'))\n",
     "        )\n",
     "        login_button.click()\n",
-    "        print(\"Login button clicked.\")\n",
     "    except TimeoutException:\n",
-    "        print(\"Login button not found. Exiting.\")\n",
     "        return\n",
     "    \n",
     "    time.sleep(5)\n",
@@ -217,7 +209,7 @@
     "            button.click()\n",
     "            time.sleep(1)\n",
     "    except Exception as e:\n",
-    "        print(f\"Error handling pop-ups: {e}\")\n",
+    "        pass\n",
     "\n",
     "def search_and_follow_users(search_term):\n",
     "    driver.get(f'https://twitter.com/search?q={search_term}&src=typed_query&f=user')\n",
@@ -240,11 +232,9 @@
     "                    try:\n",
     "                        driver.execute_script(\"arguments[0].click();\", button)\n",
     "                    except Exception as js_e:\n",
-    "                        print(f\"Error clicking follow button with JavaScript: {js_e}\")\n",
     "                        continue\n",
     "\n",
     "                followed_users += 1\n",
-    "                print(f\"Followed user {followed_users} for search term '{search_term}'\")\n",
     "                time.sleep(2)\n",
     "                if followed_users >= 500:\n",
     "                    return\n",
@@ -259,18 +249,17 @@
     "                pass\n",
     "        \n",
     "        except Exception as e:\n",
-    "            print(f\"An error occurred: {e}\")\n",
     "            scrolling = False\n",
     "\n",
     "    if followed_users == 0:\n",
-    "        print(f\"Could not find any users to follow for the search term '{search_term}'\")\n",
+    "        pass\n",
     "\n",
     "login_to_twitter(twitter_username, twitter_password)\n",
     "\n",
     "for term in search_terms:\n",
     "    search_and_follow_users(term)\n",
     "\n",
-    "driver.quit()"
+    "driver.quit()\n"
    ]
   }
  ],
